<resources>
    <string name="app_name">CheckList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">Developer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_sign_in">Submit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="error_field_required">Email is required</string>
    <string name="enter_email_password">Please Enter email address and password</string>

    <string name="login">LOGIN</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="forget">Forgot Password?</string>
    <string name="forgt">Forgot Password</string>
    <string name="email_id">Email</string>
    <string name="sbmt">Submit</string>
    <string name="room">Room No. ...</string>
    <string name="dash">Dashboard</string>
    <string name="chcklst">Daily Checklist </string>
    <string name="vw_chklst">Monthly Checklist</string>
    <string name="weekly">Weekly Checklist</string>
    <string name="pending">Pending Checklist</string>
    <string name="missed">Missed Checklist</string>
    <string name="usr">User Checklist</string>
    <string name="lgut">Logout </string>

</resources>
