<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dash" />

        <item
            android:id="@+id/nav_daily"
            android:icon="@drawable/nav_daily"
            android:title="@string/chcklst" />
      <item
            android:id="@+id/nav_monhtly"
          android:icon="@drawable/monthly_icon"
            android:title= "@string/vw_chklst" />
        <item
            android:id="@+id/nav_weekly"
            android:icon="@drawable/weekly_dash"
            android:title="@string/weekly" />
        <item
            android:id="@+id/nav_pending"
            android:icon="@drawable/pending_dash"
            android:title="@string/pending" />
        <item
            android:id="@+id/nav_missed"
            android:icon="@drawable/missed_nav"
            android:title="@string/missed" />

      <!--  <item
            android:id="@+id/nav_user"
            android:icon="@drawable/user"
            android:title="@string/missed" />-->


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/lgut" />

    </group>
</menu>
