<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg_img"
    android:id="@+id/root_view"
    android:orientation="vertical"
    android:weightSum="2"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:fitsSystemWindows="true"
        android:background="@color/blue"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="35dp"
            android:id="@+id/back"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:src="@drawable/back"
            android:layout_height="25dp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="@string/forgt"
            android:textSize="16sp"
            android:typeface="serif"
            android:gravity="start"
            android:layout_marginLeft="60dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@+id/lnr"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/loginicon"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_below="@+id/lnr"
        android:layout_marginLeft="40dp"
        android:layout_weight="1"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:alpha=".7"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_frg_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:hint="@string/email_id"
                android:drawableLeft="@drawable/email_icon"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:typeface="serif"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:drawablePadding="5dp"
                android:paddingLeft="10dp"
                android:background="@drawable/checklist_round_corner_button"
                android:digits="0,1,2,3,4,5,6,7,8,9,@,.,qwertzuiopasdfghjklyxcvbnmABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:text="@string/sbmt"
                android:typeface="serif"
                android:gravity="center"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:id="@+id/submt_btn"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>



